--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,9 +6,9 @@ name: CI
 on:
   # Triggers the workflow on push or pull request events but only for the Geez-Userbot branch
   push:
-    branches: [ Geez-UserBot]
+    branches: [ Rose-UserBot]
   pull_request:
-    branches: [ Geez-UserBot]
+    branches: [ Rose-UserBot]
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
