--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -2,9 +2,9 @@
 
 on:
   push:
-    branches: [ Geez-UserBot ]
+    branches: [ Rose-UserBot ]
   pull_request:
-    branches: [ Geez-UserBot ]
+    branches: [ Rose-UserBot ]
 
 jobs:
   build:
@@ -34,4 +34,4 @@ jobs:
     - name: Test with pytest
       run: |
         pytest
-[![Python package](https://github.com/vckyou/Geez-UserBot/actions/workflows/python-package.yml/badge.svg?branch=Geez-UserBot&event=workflow_dispatch)](https://github.com/vckyou/Geez-UserBot/actions/workflows/python-package.yml)
+[![Python package](https://github.com/SendiAp/Rose-UserBot/actions/workflows/python-package.yml/badge.svg?branch=Rose-UserBot&event=workflow_dispatch)](https://github.com/SendiAp/Rose-UserBot/actions/workflows/python-package.yml)
