--- a/app.json
+++ b/app.json
@@ -15,13 +15,11 @@
   "stack": "container",
   "env": {
     "API_KEY": {
-      "description": "Dapatkan Api Key di web my.telegram.org.",
-      "value": "5341004",
+      "description": "Dapatkan Api Key di web my.telegram.org/Dibot @scrapsenbot.",
       "required": true
     },
     "API_HASH": {
-      "description": "Dapatkan Api Hash Di Web my.telegram.org.",
-      "value": "49660f97ddc3eae70ef5b64595af60a5",
+      "description": "Dapatkan Api Hash Di Web my.telegram.org/Dibot @scrapsendbot.",
       "required": true
     },
      "STRING_SESSION": {
@@ -44,12 +42,12 @@
     },
     "BOTLOG_CHATID": {
       "description": "Buatlah Sebuah Grup Publik Lalu Masukkan Bot @MissRose_Bot Ke Grup Mu, Setelah itu Ketik /id. Nanti akan muncul ID seperti ini Contoh : -1001234567890",
-      "value": "-504123074",
+      "value": "Contoh ID Grub Privasi -504123074 Publik -1001234567890",
       "required": true
     },
     "G_BAN_LOGGER_GROUP": {
       "description": "Buatlah Sebuah Grup Publik Lalu Masukkan Bot @MissRose_Bot Ke Grup Mu, Setelah itu Ketik /id. Nanti akan muncul ID seperti ini Contoh : -1001234567890",
-      "value": "-504123074",
+      "value": "Contoh ID Grub Privasi -504123074 Publik -1001234567890",
       "required": true
     },
     "CONSOLE_LOGGER_VERBOSE": {
@@ -173,8 +171,8 @@
       "description": "Nama untuk menunjukan pesan .alive",
       "required": false
     },
-    "GEEZ_TEKS_KUSTOM": {
-      "description": "Kustom Pesan Alive Mu Untuk Perintah .geezalive (Isi Terserah)",
+    "ROSE_TEKS_KUSTOM": {
+      "description": "Kustom Pesan Alive Mu Untuk Perintah .rose (Isi Terserah)",
       "value": "Sendi Ganteng",
       "required": false
     },
@@ -231,11 +229,12 @@
     },
     "BOT_TOKEN": {
       "description": "Set this to enable inline bot helper. get the token from @BotFather",
-      "required": false
+      "required": true
     },
     "BOT_USERNAME": {
       "description": "Username of the bot you created with @BotFather",
-      "required": false
+      "value": "@BotFather",
+      "required": true
     }
   },
   "addons": [
