--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "name": "🌹Rose-Userbot🌹",
   "description": "🚫Rose-Userbot🚫 USERBOT KHUSUS YANG DIGUNAKAN UNTUK BERSENANG-SENANG DI TELEGRAM.",
-  "logo": "",
+  "logo": "https://telegra.ph/file/1bcc76432f376efc01468.jpg",
   "keywords": [
     "telegram",
     "userbot",
