--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,7 +4,7 @@ name: CI
 
 # Controls when the action will run. 
 on:
-  # Triggers the workflow on push or pull request events but only for the Geez-Userbot branch
+  # Triggers the workflow on push or pull request events but only for the Rose-Userbot branch
   push:
     branches: [ Rose-Userbot]
   pull_request:
