--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -2,9 +2,9 @@
 
 on:
   push:
-    branches: [ Rose-Userbot ]
+    branches: [ KEK-USERBOT ]
   pull_request:
-    branches: [ Rose-Userbot ]
+    branches: [ KEK-USERBOT ]
 
 jobs:
   build:
@@ -34,4 +34,4 @@ jobs:
     - name: Test with pytest
       run: |
         pytest
-[![Python package](https://github.com/SendiAp/Rose-Userbot/actions/workflows/python-package.yml/badge.svg?branch=Rose-Userbot&event=workflow_dispatch)](https://github.com/SendiAp/Rose-Userbot/actions/workflows/python-package.yml)
+[![Python package](https://github.com/skuyykek69/KEK-USERBOT/actions/workflows/python-package.yml/badge.svg?branch=Rose-Userbot&event=workflow_dispatch)](https://github.com/skuyykek69/KEK-USERBOT/actions/workflows/python-package.yml)
