--- a/app.json
+++ b/app.json
@@ -173,7 +173,7 @@
     },
     "ROSE_TEKS_KUSTOM": {
       "description": "Kustom Pesan Alive Mu Untuk Perintah .rosealive (Isi Terserah)",
-      "required": false
+      "required": true 
     },
     "S_PACK_NAME": {
       "description": "Nama Sticker Pack Mu",
