--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -26,6 +26,9 @@ jobs:
       # commit changes
       - uses: stefanzweifel/git-auto-commit-action@v4
         with:
+      # commit changes
+      - uses: stefanzweifel/git-auto-commit-action@v4
+        with:
           commit_message: 'pylint: auto fixes'
           commit_options: '--no-verify --signoff'
           repository: .
