--- a/requirements.txt
+++ b/requirements.txt
@@ -7,15 +7,17 @@ bitlyshortener
 bs4
 colour
 cloudscraper
+cryptg
 covid
 cowpy
 deezloader
 dnspython
-emoji
+emoji==1.7.0
 faker
 ffmpeg-python
 fontTools
 geopy
+git+https://github.com/LonamiWebs/Telethon@v1.24
 git+https://github.com/1danish-00/carbon-now-sh-api-wrapper.git
 git+https://github.com/buddhhu/img2html.git
 git+https://github.com/yt-dlp/yt-dlp@master
@@ -47,13 +49,11 @@ pendulum
 pillow
 psutil
 psycopg2-binary
-pybase64
 py-tgcalls
 pyaztro
 pybase64
 pyfiglet
 PyGithub
-pylast
 PyPDF2
 pySmartDL
 python-barcode
@@ -73,14 +73,12 @@ speedtest-cli
 sqlalchemy-json
 sqlalchemy==1.3.23
 telegraph
-telethon==1.24.0
 telethon-session-sqlalchemy
 telethon-tgcrypto
 urbandict
 validators
 vcsi
 wand
-webpage2telegraph
 wget
 wikipedia
 wordcloud
