--- a/requirements.txt
+++ b/requirements.txt
@@ -1,88 +1,47 @@
 aiofiles
-aiohttp[speedups]
-async_generator
-asyncurban
-beautifulsoup4
-bitlyshortener
+aiohttp
+APScheduler==3.7.0
+blackpink
 bs4
-colour
-cloudscraper
-cryptg
-covid
-cowpy
-deezloader
-dnspython
-emoji==1.7.0
-faker
+emoji==1.6.0
 ffmpeg-python
-fontTools
-geopy
-git+https://github.com/LonamiWebs/Telethon@v1.24
-git+https://github.com/1danish-00/carbon-now-sh-api-wrapper.git
-git+https://github.com/buddhhu/img2html.git
-git+https://github.com/yt-dlp/yt-dlp@master
+geezlibs==1.7.3
+git+https://github.com/Itz-fork/py-trans.git
 gitpython
-glitch_this
-google_images_download
-google_trans_new
-googletrans==4.0.0rc1
-gtts
-hachoir
-hentai
+googlesearch-python
+gpytranslate
+gTTs
+gunicorn
 heroku3
-html_telegraph_poster
-htmlwebshot
-httplib2
-humanize 
-jikanpy
-js2py
-justwatch
-lottie
-lxml
-markdown
-motor
-natsort
-nekos.py
+humanize
+httpx
+httpx[http2]
+motor==3.0.0
 opencv-python-headless
-pafy
-pendulum
-pillow
+openai
+phlogo
+prettytable
 psutil
-psycopg2-binary
-py-tgcalls
-pyaztro
-pybase64
-pyfiglet
 PyGithub
-PyPDF2
-pySmartDL
-python-barcode
+pymongo
+py-extract
+pykeyboard
+pymediainfo
+python-telegram-bot
 python-dotenv
-pytz
-qrcode
-rarfile
-randomstuff.py
-regex
+pytgcalls==3.0.0.dev24
+pyrogram
+reportlab
 requests
-scipy
-search-engine-parser
-selenium
-setuptools
-spamwatch
-speedtest-cli
-sqlalchemy-json
-sqlalchemy==1.3.23
+speedtest-cli==2.1.3
+SpeechRecognition
+svglib
+tgcrypto
 telegraph
-telethon-session-sqlalchemy
-telethon-tgcrypto
-urbandict
-validators
-vcsi
-wand
+telegram
+uwuify
+uvloop
 wget
-wikipedia
-wordcloud
-youtube-dl
 youtube-search
-youtube-search-python==1.4.9
-zipfile38
+youtube-search-python
+yt-dlp
