--- a/app.json
+++ b/app.json
@@ -1,53 +1,58 @@
 {
-  "name": "Rose-Userbot",
-  "description": "[Rose-Userbot] userbot Telegram modular yang berjalan pada Python 3.9+",
-  "stack": "container",
-  "env": {
-    "API_KEY": {
-      "description": "Dapatkan API KEY di web my.telegram.org Masukan yg APP ID Telegram",
-      "required": true
+    "name": "Rose-Userbot",
+    "description": "UserBot!!.",
+    "logo": "https://telegra.ph/file/c78bb1efdeed38ee16eb2.png",
+    "keywords": ["telegram", "userbot", "Rose", "pyrogram"],
+    "repository": "https://github.com/SendiAp/Rose-Userbot",
+    "stack": "container",
+    "env": {
+        "STRING_SESSION1": {
+            "description": "fill with the pyrogram V2 session string from @geezramstringrobot",
+            "required": true
+        },
+        "MONGO_URL": {
+            "description": "Fill there an mongo database from mongodb.com",
+            "required": true,
+            "value": ""
+        },
+        "OPENAI_API": {
+            "description": "Jika ingin menggunakan openai, isi openai-api-key",
+            "required": false,
+            "value": ""
+        },
+        "OWNER_ID": {
+            "description": "Fill there your I'd go to @geezramrobot pm and type /id",
+            "required": true,
+            "value": "1234567890"
+        },
+        "BOT_TOKEN": {
+            "description": "fill with your bot token get from @BotFather on telegram",
+            "required": true,
+            "value": ""
+        },
+        "HEROKU_API_KEY": {
+            "description": "Heroku Api Key",
+            "required": true,
+            "value": "."
+        },
+        "HEROKU_APP_NAME": {
+            "description": "Heroku APP name",
+            "required": true,
+            "value": "."
+        }
     },
-    "API_HASH": {
-      "description": "Dapatkan API Hash di web my.telegram.org",
-      "required": true
-    },
-    "BOT_TOKEN": {
-      "description": "Buat Bot di t.me/botfather Masukan BOT tokennya disini〔 Bila Tidak tau bisa di /skip 〕",
-      "required": false
-    },
-     "STRING_SESSION": {
-      "description": "Dapatkan String Session di Grup » https://t.me/SharingUserbot » Lalu ketik #string",
-      "required": true
-    },
-    "HEROKU_APP_NAME": {
-      "description": "Nama App heroku, Nama App yang paling pertama di isi (liat paling atas)",
-      "required": true
-    },
-    "HEROKU_API_KEY": {
-      "description": "Ambil Heroku API KEY mu disini » https://dashboard.heroku.com/account",
-      "required": true
-    }
-  },
-  "addons": [
-    {
-    "plan": "heroku-postgresql",
-      "options": {
-        "version": "12"
+    "buildpacks": [
+        {
+          "url": "heroku/python"
+        },
+        {
+          "url": "https://github.com/jonathanong/heroku-buildpack-ffmpeg-latest.git"
+        }
+    ],
+    "formation": {
+        "worker": {
+          "quantity": 1,
+          "size": "eco"
+        }
       }
-    }
-  ],
-  "buildpacks": [
-    {
-      "url": "heroku/python"
-    },
-    {
-      "url": "https://github.com/jonathanong/heroku-buildpack-ffmpeg-latest.git"
-    }
-  ],
-  "formation": {
-    "worker": {
-      "quantity": 1,
-      "size": "free"
-    }
   }
-}
